<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/cv5TextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cv5_1" />

        <CheckBox
            android:id="@+id/cv5CheckBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
             android:layout_marginBottom="4dp"
            android:paddingRight="6dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/cv5TextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cv5_2" />

        <CheckBox
            android:id="@+id/cv5CheckBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
             android:layout_marginBottom="4dp"
            android:paddingRight="6dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/cv5TextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cv5_3" />

        <CheckBox
            android:id="@+id/cv5CheckBox3"
             android:layout_marginBottom="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingRight="6dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/cv5TextView4"
             android:layout_marginBottom="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cv5_4" />

        <CheckBox
            android:id="@+id/cv5CheckBox4"
             android:layout_marginBottom="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingRight="6dp" />
    </LinearLayout>

</LinearLayout>