<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cv4LayoutModulo"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/cv4TextViewIdioma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/cv4Idioma"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/primary_text_light" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="3dip"
            android:background="#FF909090" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cv4TextViewIdioma"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/cv4EditIdioma"
            android:layout_width="260dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/cv4ImageViewLapiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_content_edit" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/cv4TextViewHablado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/cv4NivelHablado"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/primary_text_light" />

        <SeekBar
            android:id="@+id/cv4SeekBarHablado"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/cv4TextViewHablado" />

        <TextView
            android:id="@+id/cv4TextViewSeekBarHablado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/cv4SeekBarHablado"
            android:text="@string/cv4NivelHablado"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="@android:color/primary_text_light" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/cv4TextViewEscrito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/cv4NivelEscrito"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/primary_text_light" />

        <SeekBar
            android:id="@+id/cv4SeekBarEscrito"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/cv4TextViewEscrito" />

        <TextView
            android:id="@+id/cv4TextViewSeekBarEscrito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/cv4SeekBarEscrito"
            android:text="@string/cv4NivelEscrito"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="@android:color/primary_text_light" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/cv4TextViewLectura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/cv4NivelLectura"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/primary_text_light" />

        <SeekBar
            android:id="@+id/cv4SeekBarLectura"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/cv4TextViewLectura" />

        <TextView
            android:id="@+id/cv4TextViewSeekBarLectura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/cv4SeekBarLectura"
            android:text="@string/cv4NivelLectura"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="@android:color/primary_text_light" />
    </RelativeLayout>

</LinearLayout>