<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cv3LayoutModulo"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/cv3TextViewTrabajo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/cv3Trabajo"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/primary_text_light" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="3dip"
            android:background="#FF909090" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/cv3EditTrabajo"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv2TextViewEstudios" />

        <ImageView
            android:id="@+id/cv3ImageViewLapiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_content_edit" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cv3TextViewPeriodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cv2EditEstudios"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/cv2Periodo"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/primary_text_light" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="3dip"
            android:background="#FF909090" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cv3Periodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/cv3SpinnerAnoInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv2Periodo"
            android:layout_marginRight="8dp" />

        <Spinner
            android:id="@+id/cv3SpinnerAnoFin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cv3TextViewEmpresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/cv3Empresa"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/primary_text_light" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="3dip"
            android:background="#FF909090" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/cv3EditEmpresa"
            android:layout_width="260dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/cv3ImageViewLapiz1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_content_edit" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cv3TextViewDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/cv3Descripcion"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/primary_text_light" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="3dip"
            android:background="#FF909090" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/cv3EditDescripcion"
            android:layout_width="260dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/cv3ImageViewLapiz2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_content_edit" />
    </LinearLayout>

</LinearLayout>